--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <title>My New Assignment</title>
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <h1>Select Country State City Zip</h1>
+    <form class="dropdown-group">
+      <select id="Country" size="1">
+        <option value="" selected="selected">-- Select Country --</option>
+      </select>
+
+      <select id="State" size="1">
+        <option value="" selected="selected">-- Select State --</option>
+      </select>
+
+      <select id="City" size="1">
+        <option value="" selected="selected">-- Select City --</option>
+      </select>
+
+      <select id="Zip" size="1">
+        <option value="" selected="selected">-- Select Zip --</option>
+      </select>
+    </form>
+    <script>
+      console.log("Hello")
+      </script>
+    <script src="main.js"></script>
   </body>
 </html>
